updates from run on 10_19

--- a/bayes_exp_sigma_x.ipynb
+++ b/bayes_exp_sigma_x.ipynb
@@ -896,7 +896,9 @@
     "from observations.yag_screen import YAGScreen\n",
     "from xopt.bayesian.algorithms import bayesian_exploration\n",
     "\n",
+    "from botorch.acquisition.analytic import UpperConfidenceBound\n",
     "\n",
+    "def acq\n",
     "\n",
     "class Evaluator:\n",
     "    def __init__(self, interface):\n",
